# embody-3d

./: .gitignore  README.md  download.txt  pyproject.toml  unzip_datasets.sh
datasets/acting/: dataset.json
datasets/daylife/: dataset.json
datasets/emotions/: dataset.json
datasets/icebreakers/: dataset.json
datasets/location/: dataset.json
datasets/polyadic/: dataset.json
src/embody3d/: __init__.py  dataloader.py  run.py  visualize.py
