[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embody-3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.0.1",
    "ffmpeg>=1.4",
    "pyopengl>=3.1.0",
    "pyrender>=0.1.45",
    "smplx[all]>=0.1.28",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["embody3d"]
