[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embody3d"
version = "0.1.0"
description = "Embody 3D: A Large-scale Multimodal Motion and Behavior Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.0.1",
    "ffmpeg>=1.4",
    "numpy<2.0",
    "pyopengl>=3.1.0,!=3.1.10",
    "pyrender>=0.1.45",
    "smplx[all]>=0.1.28",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
]

[tool.uv]
override-dependencies = [
    "pyopengl==3.1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/embody3d"]
